// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      expense={
        Object {
          "amount": 100,
          "createdAt": 0,
          "description": "Gas",
          "id": "1",
          "note": "",
        }
      }
      key="1"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 200,
          "createdAt": 345600000,
          "description": "Water",
          "id": "2",
          "note": "",
        }
      }
      key="2"
    />
    <ExpenseListItem
      expense={
        Object {
          "amount": 300,
          "createdAt": -345600000,
          "description": "Rent",
          "id": "3",
          "note": "",
        }
      }
      key="3"
    />
  </div>
</div>
`;

exports[`should render ExpenseList with no expense 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
